Deploy scripts, proxy code

--- a/testing/cert-test/Dockerfile
+++ b/testing/cert-test/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
 RUN apk add --no-cache ca-certificates
-COPY gateway /gateway
+COPY cert-test /cert-test
 EXPOSE 443
-ENTRYPOINT [ "/gateway" ]
+ENTRYPOINT [ "/cert-test" ]
