--- a/441-clients/package.json
+++ b/441-clients/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "moment": "^2.29.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.0-alpha.1",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "^16.8.0-alpha.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3"
