--- a/441-clients/default.conf
+++ b/441-clients/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    server_name scheduleup.info;
+    server_name scheduleup.info www.scheduleup.info;
     return 301 https://$server_name$request_uri;
 }
 
