--- a/441-clients/package.json
+++ b/441-clients/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.0-alpha.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3"
   },
